--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8" />
         <title>Test technique</title>
 
-
-        <link data-require="bootstrap-css@3.2.0" data-semver="3.2.0" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/style.css" />
 
-        <script data-require="angular.js@1.2.22" data-semver="1.2.22" src="https://code.angularjs.org/1.2.22/angular.js"></script>
-        <script src="https://code.angularjs.org/1.2.20/angular-route.js"></script>
+        <script src="https://code.angularjs.org/1.3.9/angular.js"></script>
+        <script src="https://code.angularjs.org/1.3.9/angular-route.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-google-maps/2.0.12/angular-google-maps.min.js'></script>
         <script src="js/GMDrawing.js"></script>
